--- a/capitulos/introduccion.tex
+++ b/capitulos/introduccion.tex
@@ -22,8 +22,8 @@
     
     Con la aplicación del Internet de las Cosas en estas salas expositivas es posible reducir la incidencia de estos factores. La tecnología permitirá a los responsables del museo tener una visión más precisa y completa de lo que ocurre, brindando la posibilidad de evaluar en tiempo real el estado de cada área para la toma de decisiones ante alertas por eventos de deterioro.
     
-    El análisis de la situación descrita permite identificar como \textbf{problema de la investigación} la inexistencia de un sistema de supervisión de bajo consumo para el control en tiempo real del estado de conservación de las piezas pertenecientes a la Colección de Arte y Arqueología “Francisco Prat Puig” ubicada en la Oficina del Historiador de la provincia de Santiago de Cuba, imposibilitando la labor de conservación de los especialistas del centro y como
-    \textbf{objeto de la investigación:} sistemas de supervisión basados en IoT para la conservación de las piezas en la Colección de Arte y Arqueología “Francisco Prat Puig” teniendo en cuenta como \textbf{objetivo} diseñar e implementar un sistema de IoT que permita la supervisión en tiempo real de las variables medioambientales existentes en la Colección Prat. Como \textbf{campo de acción} los sistemas de supervisión basados en IoT para la conservación de las piezas en los museos.
+    El análisis de la situación descrita permite identificar como \textbf{problema de investigación} la necesidad de un sistema de supervisión para conocer en tiempo real el estado de los parámetros ambientales presentes en la Colección de Arte y Arqueología “Francisco Prat Puig” ubicada en la Oficina del Historiador de la provincia de Santiago de Cuba, imposibilitando la labor de conservación de los especialistas del centro y como
+    \textbf{objeto de la investigación:} sistema basado en IoT para la supervisión de los parámetros ambientales presentes en la Colección de Arte y Arqueología “Francisco Prat Puig” teniendo en cuenta como \textbf{objetivo} diseñar e implementar un sistema de IoT que permita la supervisión en tiempo real de las variables medioambientales existentes en la Colección Prat. Como \textbf{campo de acción} los sistemas de supervisión basados en IoT para la conservación de las piezas en los museos.
 
     Se plantea como \textbf{hipótesis} que si logramos diseñar e implementar un sistema de supervisión de las piezas de arte en la Colección Prat, de tal manera que se muestren en tiempo real, el estado de conservación de los objetos, posibles afectaciones y los momentos más adecuados para efectuar una restauración, estaríamos ... y mejorando las condiciones de trabajo de los especialistas que allí laboran.\\
     
@@ -60,7 +60,7 @@
 
     El \textbf{aporte de esta investigación} consiste en el montaje de un sistema de supervisión empleando tecnologías basadas en el Internet de las Cosas en museos. Esta propuesta sirve como base documental actualizada y novedosa permitiendo su implementación en cualquier instalación con características similares, en especial en los museos de la ciudad de Santiago de Cuba.
 
-    \textbf{Extructura del trabajo}
+    \textbf{Estructura del trabajo}
 
     El presente trabajo investigativo está compuesto por una introducción general, dos capítulos con sus introducciones y conclusiones parciales, conclusiones generales, recomendaciones, apéndices y bibliografías.
 
