--- a/capitulos/listado.tex
+++ b/capitulos/listado.tex
@@ -16,9 +16,7 @@
     \newline
     \textbf{HTTP} - Hypertext Transfer Protocol
     \newline
-    \textbf{GPIO} - ...
-    \newline
-    \textbf{ESP} - ...
+    \textbf{GPIO} - General Purpose Input Output
     
     \setcounter{page}{1}
     \thispagestyle{plain}
